# sageagent

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  README.md  pyproject.toml
docs/diagrams/: architecture_overview.txt  memory_graph.txt  tool_system.txt  topology_decomposition.txt
openspec/: project.md
openspec/changes/add-core-architecture/: design.md  proposal.md  tasks.md
openspec/changes/add-core-architecture/specs/agent-communication/: spec.md
openspec/changes/add-core-architecture/specs/agent-engine/: spec.md
openspec/changes/add-core-architecture/specs/memory-graph/: spec.md
sageagent/: __init__.py  cli.py
sageagent/communication/: __init__.py  bus.py  protocols.py
sageagent/core/: __init__.py  agent.py  config.py  engine.py  types.py
sageagent/llm/: __init__.py  base.py  claude.py  openai.py
sageagent/memory/: __init__.py  graph.py  node.py  query.py
sageagent/tools/: __init__.py  base.py  generator.py  registry.py
sageagent/tools/builtins/: __init__.py  code_analysis.py  docker.py  file_ops.py  shell.py
sageagent/topology/: __init__.py  dag.py  decomposer.py  manager.py
tests/: conftest.py
tests/communication/: test_bus.py  test_protocols.py
tests/core/: test_agent.py  test_cli.py  test_config.py  test_engine.py  test_types.py
tests/llm/: test_base.py  test_claude.py  test_openai.py
tests/memory/: test_graph.py  test_node.py  test_query.py
tests/tools/: test_base.py  test_builtins.py  test_generator.py  test_registry.py
tests/topology/: test_dag.py  test_decomposer.py  test_manager.py
(+2 files in other folders)
